doc: update opening documentation
